# advent_of_code

./: .env  .gitignore  README.md  pyproject.toml
src/aoc/: main.py
src/aoc/2015/: commons.py  puzzle_template.py
src/aoc/2015/day_1/: commons.py  part_1.py  part_2.py
src/aoc/2015/day_2/: commons.py  part_1.py  part_2.py
src/aoc/2015/day_3/: commons.py  part_1.py  part_2.py
src/aoc/2015/day_4/: commons.py  part_1.py  part_2.py
src/aoc/2025/: puzzle_template.py
src/aoc/2025/day_1/: part_1.py  part_2.py
src/aoc/2025/day_10/: commons.py  part_1.py  part_2.py
src/aoc/2025/day_11/: commons.py  part_1.py  part_2.py
src/aoc/2025/day_12/: commons.py  part_1.py
src/aoc/2025/day_2/: part_1.py  part_2.py
src/aoc/2025/day_3/: part_1.py  part_2.py
src/aoc/2025/day_4/: part_1.py  part_2.py
src/aoc/2025/day_5/: part_1.py  part_2.py
src/aoc/2025/day_6/: part_1.py  part_2.py
src/aoc/2025/day_7/: part_1.py  part_2.py
src/aoc/2025/day_8/: commons.py  part_1.py  part_2.py
src/aoc/2025/day_9/: commons.py  part_1.py  part_2.py
src/aoc/commons/: linear_equations.py  maths.py
src/aoc/core/: config.py  day.py  puzzle.py
src/aoc/services/: __init__.py  aoc.py
